Fixing iOS viewing and overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -94,7 +94,6 @@ input {
   position: fixed;
   height: 100vh;
   width: 100%;
-  overflow: auto;
 }
 
 .mobile-background-image {
